--- a/src/teknasyonTest/package.json
+++ b/src/teknasyonTest/package.json
@@ -10,7 +10,11 @@
     "test": "jest --watchAll"
   },
   "jest": {
-    "preset": "jest-expo"
+    
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
