--- a/src/teknasyonTest/package.json
+++ b/src/teknasyonTest/package.json
@@ -10,7 +10,6 @@
     "test": "jest --watchAll"
   },
   "jest": {
-    
     "preset": "jest-expo",
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
@@ -37,7 +36,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.6",
     "@types/react": "~18.2.45",
+    "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.2",
     "prettier": "^3.2.5",
